Sidebar is collapsable Fixed some styles

--- a/public/styles/master.scss
+++ b/public/styles/master.scss
@@ -100,6 +100,7 @@
   flex-direction: column;
   align-items: stretch;
   margin-left: 250px;
+  margin-top: 40px;
   &.side-bar-collapsed{
     margin-left: 50px;
   }
